# mdfy

./: .dockerignore  .gitignore  Dockerfile  README.md  mdfy.py  pyproject.toml
converters/: markdown_splitter.py
tests/: conftest.py  markdown_splitter.py  test_env.py  test_error_handling.py  test_markdown_splitter.py
utils/: environment.py  error_handling.py  file_operations.py
